# python-1

./: README.rst  azure-pipelines.yml  pyproject.toml  requirements.txt  setup.cfg  tox.ini
